# Neobotix_mpo_500

./: CMakeLists.txt  README.md  package.xml  pso_plugin.xml
config/: bridge.yaml  nav2_params.yaml
include/neobotix_mpo_500/: pso_planner.hpp
launch/: display.launch.py  gazebo.launch.py  navigation.launch.py
maps/: factory_map.pgm  factory_map.yaml
meshes/: base_link.STL  front_left.STL  front_right.STL  lidar.STL  rear_left.STL  rear_right.STL
scripts/: mecanum_drive_node.py  scan_frame_fix_node.py
src/: pso_planner.cpp
urdf/: neobotix_mpo_500.csv  neobotix_mpo_500.urdf.xacro
worlds/: custom_factory.sdf
